@@ -1,3 +1,13 @@
+1998-10-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* krshd.c (doit): Apply ghudson's patch so that rshd passes the
+		port numbers for the local and foreign addresses so that
+		the V4 encrypted RCP will work correctly.  [krb5-appl/638]
+	* v4rcp.c (answer_auth): Apply ghudson's patch so that if
+		KRB5LOCALPORT and KRB5REMOTEPORT are set, use them to set
+		the foreign and local ports so that encrypted rcp for the
+		same machine.  [krb5-appl/638]
+
 Sat Aug 15 00:01:15 1998  Geoffrey King  <gjking@mit.edu>
 
 	* krcp.c (error): Don't call rcmd_stream_write if iamremote is not
